# oscillo

./: README.md
oscillo/: .gitignore  CMakeLists.txt
oscillo/.cache/clangd/index/: canvas.cpp.6E51E8F207F7D969.idx  canvas.h.60CBE135D8C1414A.idx  evaluator.cpp.379EAC62549334D9.idx  evaluator.cpp.EED2B7F8A2604CB5.idx  evaluator.h.99F3DEE706C98288.idx  evaluator.h.DAE6355A21164F2B.idx  evaluator_tests.cpp.25EA8ADCD3684FD4.idx  lexer.cpp.7A4F801AAF8DDD9F.idx  lexer.cpp.F212AF8A50C6F7DB.idx  lexer.h.A06162979ED1FFE0.idx  lexer.h.DC3B4C8976056619.idx  main.cpp.2926D1C0E0ED8DDA.idx  main.cpp.705D5E2B51DC974E.idx  parser.cpp.233A6C6D5190DCBE.idx  parser.h.D3064EB784617486.idx  plotter.cpp.0F17F0958014B839.idx  plotter.h.4B7EEB422E1F6769.idx  syntax_tree.cpp.863286DD9F351300.idx  syntax_tree.h.C99F5D85D4FC63FE.idx  token.cpp.109855142A1D797E.idx  token.h.38725E069BE81693.idx  token.h.A233231929E604E9.idx  token_factory.h.0CEB16C4E9B09BDF.idx
oscillo/include/: evaluator.h  lexer.h  syntax_tree.h  token.h
oscillo/include/lexical_analysis/: lexer.h  token.h  token_factory.h
oscillo/include/syntax_analysis/: parser.h  syntax_tree.h
oscillo/include/ui/: canvas.h  plotter.h
oscillo/src/: evaluator.cpp  main.cpp  test_ncurses.cpp
oscillo/src/evaluator/: evaluator.cpp  lexer.cpp  token.cpp
oscillo/src/function_eval/: evaluator.cpp
oscillo/src/function_eval/lexical_analysis/: lexer.cpp  token.cpp
oscillo/src/function_eval/syntax_analysis/: parser.cpp  syntax_tree.cpp
oscillo/src/lexical_analysis/: lexer.cpp  token.cpp
oscillo/src/syntax_analysis/: parser.cpp  syntax_tree.cpp
oscillo/src/tests/: evaluator_tests.cpp
oscillo/src/ui/: canvas.cpp  plotter.cpp
